--- a/src/.env.dev
+++ b/src/.env.dev
@@ -1,6 +1,21 @@
+[JWT]
+SECRET_KEY=secret_key
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=60
+
+
 [PostgreSQL]
 PSQL_DB=test_db
 PSQL_USER=test
 PSQL_PASS=test
-PSQL_PORT=5430
-PSQL_HOST=localhost
+PSQL_PORT=5432
+PSQL_HOST=postgres
+
+[Redis]
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+
+[FastAPI]
+FAST_API_HOST=0.0.0.0
+FAST_API_PORT=8000
